1. Fixed the User profile cutting issue in lower resolutions. 2. Fixed the loading issues in matters page. 3. Fixed the menu overlapping issue with flyout in matters and documents pages. 4. Fixed the other Ui design issues of column headers in matters and document pages.

--- a/tree/master/cloud/src/solution/Microsoft.Legal.MatterCenter.Web/wwwroot/css/site.css
+++ b/tree/master/cloud/src/solution/Microsoft.Legal.MatterCenter.Web/wwwroot/css/site.css
@@ -36,6 +36,16 @@ textarea {
 }
 
 
+@media (max-width: 450px) {
+    .PersonalInfoFlyout {
+        display: none !important;
+    }
+
+    #ProfileSwitcher {
+        display: none !important;
+    }
+}
+
 @media (max-width: 320px) {
     .width25 {
         width: 5% !important;
@@ -59,6 +69,17 @@ textarea {
 @media(max-width:347px) {
     .width25 {
         width: 5% !important;
+    }
+}
+
+@media screen and (max-width: 767px) and (min-width: 351px) {
+    .flyoutwidth {
+        width: 290px !important;
+    }
+}
+@media screen and (max-width: 350px)  {
+    .flyoutwidth {
+        width: 238px !important;
     }
 }
 
@@ -358,9 +379,9 @@ textarea {
         left: 27px !important;
     }
 
-    .flyoutwidth {
+    /*.flyoutwidth {
         width: 290px !important;
-    }
+    }*/
 
     .mainSearch {
         float: right;
@@ -1536,4 +1557,8 @@ textarea {
 
 #mainselect .dropdown-menu {
     min-width: 148px;
+}
+
+#mattersGrid .ui-grid-cell-contents, #Documents .ui-grid-cell-contents{
+    cursor:default;
 }
